--- a/NoteApplication/app/src/main/AndroidManifest.xml
+++ b/NoteApplication/app/src/main/AndroidManifest.xml
@@ -9,13 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NoteApplication">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".NoteListActivity"
+            android:label="@string/list_note_title"
+            android:theme="@style/Theme.NoteApplication.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".NoteActivity"
+            android:label="@string/title_edit_note" />
     </application>
 
 </manifest>
